freest/test/prog/Invalid/Typing/LinVarAtEndOfScope/LinVarAtEndOfScope.fst
module LinVarAtEndOfScope where

foo : Close -> Int
foo c = 1